battleship-game/argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-game
  namespace: battleships

spec:
  selector:
    app: ms-game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
    - name : metrics
      port : 8080
      targetPort: 8080
