battleship-game/argocd/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ms-game
  namespace: battleships
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ms-game.local`)
      kind: Rule
      services:
        - name: ms-game
          port: 80
