battleship-game/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-game-ingress
  namespace: battleships
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: ms-game.local
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: ms-game
                port:
                  number: 8082
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: ms-game
                port:
                  number: 8082
